# The-Modern-Cpp-Challenge

./: CMakeLists.txt  README.md
Chapter01/problem_08/: main.cpp
Chapter01/problem_13/: main.cpp
Chapter02/problem_20/: main.cpp
Chapter04/problem_34/: main.cpp
Chapter04/problem_35/: main.cpp
Chapter04/problem_36/: main.cpp
Chapter04/problem_37/: main.cpp
Chapter04/problem_38/: CMakeLists.txt  main.cpp
Chapter05/problem_39/: main.cpp
Chapter05/problem_43/: CMakeLists.txt
Chapter06/problem_47/: CMakeLists.txt
Chapter06/problem_59/: main.cpp
Chapter06/problem_60/: main.cpp
Chapter07/problem_61/: CMakeLists.txt
Chapter07/problem_62/: CMakeLists.txt
Chapter07/problem_63/: CMakeLists.txt  main.cpp
Chapter07/problem_64/: CMakeLists.txt
Chapter07/problem_65/: CMakeLists.txt
Chapter07/problem_66/: CMakeLists.txt  main.cpp
Chapter08/problem_68/: main.cpp
Chapter08/problem_69/: main.cpp
Chapter10/problem_79/: CMakeLists.txt
Chapter10/problem_80/: CMakeLists.txt  main.cpp
Chapter10/problem_81/: CMakeLists.txt  main.cpp
Chapter10/problem_83/: main.cpp
Chapter10/problem_85/: CMakeLists.txt
Chapter10/problem_86/: CMakeLists.txt
Chapter10/problem_87/: CMakeLists.txt
Chapter11/problem_91/: CMakeLists.txt  main.cpp
Chapter11/problem_92/: CMakeLists.txt  main.cpp
Chapter11/problem_93/: CMakeLists.txt  main.cpp
Chapter11/problem_94/: CMakeLists.txt  main.cpp
Chapter12/problem_95/: CMakeLists.txt
Chapter12/problem_96c/: CMakeLists.txt
Chapter12/problem_96s/: CMakeLists.txt
Chapter12/problem_97/: CMakeLists.txt
(+21 files in other folders)
